3.4 branch backport

BUG: 95676

svn path=/branches/KDE/3.4/kdemultimedia/kioslave/audiocd/; revision=438911